refactor: completeClassesAndMembers returns List<CodeUnit>